# ChangeLog for app-dicts/goldendict
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*goldendict-0.9.0_p20100330 (01 Apr 2010)

  01 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +goldendict-0.9.0_p20100330.ebuild, +files/goldendict-0.9.0-gcc4.4.patch,
  +metadata.xml:
  Add ebuild for live ebuild from 30/03/2010.
