@@ -1,4 +1,7 @@
+DIST enruen-content-1.1.tar.bz2 64631946 RMD160 6c326978890a75a37f8c825277fcf1637c5c68d5 SHA1 a112f72f70670065ffb1df09e7e6d59c73e50bab SHA256 caeed017ecc5952a47aafe32df9eb2697ae323780aec8d6eebf35e2a9080747d
 DIST goldendict-0.9.0_p20100330.tar.bz2 2609393 RMD160 d1eec9435715d23f4beb1412f5b728c58db1bd3e SHA1 612d5f03ba9c11f13cb5fc8b8caeb481c6384ae5 SHA256 cb8d561c36bee3c537d0a8dc7f9cfe21e649e39bffce4e3ac1cacdd53cc24bcd
+DIST goldendict-1.0.1.tar.bz2 2705932 RMD160 2a87de3172a117fbb419aa7d1e037ba2c4cb072f SHA1 a1ff36b1cceb5234f4730d1c6f19405a76d40fc4 SHA256 b3fb0405a5edb38f02ef881b48c36e46e2eacf641b0caf8d99403f595a4be9a6
 EBUILD goldendict-0.9.0_p20100330.ebuild 1332 RMD160 8de2e47da2cf9abe69ad2f98613bb79026448af7 SHA1 4eeb4850d8285403c868a6fd37c03ca326df2a03 SHA256 556a15f0d127116cdaa69454318de4e4166e50dfd2419774358f7cc173b37ada
-MISC ChangeLog 364 RMD160 ffe623ee2e83876591350cf2815d6272e53825b0 SHA1 464c104c37c2363e380338f8325b2e20554e29ef SHA256 a8a999685c78a708e8a80c5c050c2f63d67143be142e88906fc8b9c0833c0f58
+EBUILD goldendict-1.0.1.ebuild 2725 RMD160 635c5f0a8cad6fb82b46f08a0b1ad635c479ea6e SHA1 b8843ac91c58fd349a7b376f445ad33f22aea3c2 SHA256 b2a8483d0253a96f712afe031106c1191e3422801c456e510ee982172c3c34e7
+MISC ChangeLog 514 RMD160 7c9139f6e296f24c571f46439c4d9aa413d501c3 SHA1 4e83b83373b748b3b938d6944af44bec33724bcc SHA256 187dfcdd241a8e49d04b60761794a28de5c95d58d49ef2fc4c8490f72554d5a7
 MISC metadata.xml 157 RMD160 ac97f8cc970b649f4d061f6e4441eaf6144524e3 SHA1 415c2e405c673551de51cf6623305f9dbcc70b23 SHA256 94b6a379608ee8b74b175f0dfe5b2312658faf5eca74bba0787fc02c3d6859d6
