@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*goldendict-1.0.1 (29 Dec 2010)
+
+  29 Dec 2010; Трацевский Александр <alex@gentoo.org>
+  +goldendict-1.0.1.ebuild:
+  version bump
+
 *goldendict-0.9.0_p20100330 (01 Apr 2010)
 
   01 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
